(rule
 (targets h2_load_test_rpc.ml h2_load_test_rpc.mli)
 (deps
  (:proto h2_load_test_rpc.proto))
 (action
  (run
   %{bin:ocaml-protoc}
   --ocaml_all_types_ppx
   "deriving show, yojson"
   --int32_type
   int_t
   --int64_type
   int_t
   --binary
   --ml_out
   ./
   %{proto})))

(rule
 (targets H2LoadTest_client.ml)
 (deps
  (:proto h2_load_test_rpc.proto)
  %{bin:arpaca-gen})
 (action
  (run arpaca-gen client -o ./ --suffix _client %{proto})))

(rule
 (targets H2LoadTest_server.ml)
 (deps
  (:proto h2_load_test_rpc.proto)
  %{bin:arpaca-gen})
 (action
  (run arpaca-gen server -o ./ --suffix _server %{proto})))

(library
 (name h2_load_test)
 (libraries
  grpc-client-eio
  grpc-server-eio
  eio_main
  pbrt
  grpc-eio-io-server-h2-ocaml-protoc
  grpc-eio-io-client-h2-ocaml-protoc))
